# sysupdate

./: .gitignore  LICENSE  README.md  build-binary.sh  pyproject.toml  pyrightconfig.json  restore_packages.sh  sysupdate-legacy.sh  sysupdate.sh  test_downgrade.sh
.github/workflows/: release.yml
doc/loom/knowledge/: architecture.md  concerns.md  conventions.md  entry-points.md  mistakes.md  patterns.md  stack.md
sysupdate/: __init__.py  __main__.py  app.py  banner.py  console.py  styles.tcss  summary.py  ui.py
sysupdate/selfupdate/: __init__.py  binary.py  checksum.py  github.py  updater.py
sysupdate/updaters/: __init__.py  apt.py  apt_cache.py  apt_parallel.py  apt_parsing.py  aria2_downloader.py  base.py  dnf.py  dnf_parsing.py  flatpak.py  pacman.py  snap.py
sysupdate/utils/: __init__.py  aria2.py  logging.py  parsing.py
sysupdate/widgets/: __init__.py  footer.py  header.py  update_panel.py
tests/: __init__.py  conftest.py  test_app.py  test_apt_cache.py  test_apt_parallel.py  test_aria2_downloader.py  test_aria2_utils.py  test_banner.py  test_base.py  test_dnf_updater.py  test_logging.py  test_main.py  test_parsing.py  test_selfupdate.py  test_selfupdate_orchestrator.py  test_summary.py  test_ui.py  test_updaters.py  test_updaters_upgrade.py  test_utils.py  test_widgets.py
