[project]
name = "sysupdate"
version = "2.0.0"
description = "A beautiful TUI system update manager for Ubuntu/Debian"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "System Update Manager Contributors" }
]
keywords = ["tui", "system", "update", "apt", "flatpak", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=0.89.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
sysupdate = "sysupdate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sysupdate"]

[tool.hatch.build.targets.wheel.force-include]
"sysupdate/py.typed" = "sysupdate/py.typed"
