[project]
name = "sysupdate"
dynamic = ["version"]
description = "A beautiful CLI system update manager for Linux with multi-distro support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dimosthenis Kaponis" }
]
keywords = ["cli", "system", "update", "apt", "dnf", "pacman", "flatpak", "snap", "terminal", "linux", "multi-distro", "fedora", "arch", "ubuntu", "debian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "rich>=13.0.0,<15",
    "aiohttp>=3.9.0,<4",
    "packaging>=23.0,<25",
]

[project.scripts]
sysupdate = "sysupdate.__main__:main"

[build-system]
requires = ["hatchling>=1.21,<2", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sysupdate/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.hatch.build.targets.wheel]
packages = ["sysupdate"]
